--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
-    <title>Vite + React</title>
+    <title>Fast React Pizza</title>
   </head>
   <body class="bg-stone-100 text-stone-700">
     <div id="root"></div>
